package nl.han.aim.oose.dea.datasource.util;


public class MySqlDbProperties extends DbProperties {

    public MySqlDbProperties() {
        super("mysql.properties");
    }

}
